# work1

Grinder/catkin_ws/: PLATFORM_BUILD_RUN.md  build_grinder_platform.sh  start_grinder_stack.sh
Grinder/catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
Grinder/catkin_ws/devel/include/amcl/: AMCLConfig.h
Grinder/catkin_ws/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
Grinder/catkin_ws/devel/include/dwa_local_planner/: DWAPlannerConfig.h
Grinder/catkin_ws/devel/include/global_planner/: GlobalPlannerConfig.h
Grinder/catkin_ws/devel/include/grinder_chassis_driver/: ChassisStatus.h  ClearFault.h  ClearFaultRequest.h  ClearFaultResponse.h  EnableChassis.h  EnableChassisRequest.h  EnableChassisResponse.h  WheelSpeedCommand.h  WheelSpeedState.h
Grinder/catkin_ws/devel/include/grinder_scheduler/: MapPreviewMetadata.h  SchedulerStatus.h
Grinder/catkin_ws/devel/include/slamware_ros_sdk/: ActionDirection.h  AddLineRequest.h  AddLinesRequest.h  ArtifactUsage.h  BasicSensorInfo.h  BasicSensorInfoArray.h  BasicSensorValue.h  BasicSensorValueData.h  BasicSensorValueDataArray.h  ClearLinesRequest.h  ClearMapRequest.h  ImpactType.h  Line2DFlt32.h  Line2DFlt32Array.h  LocalizationMovement.h  LocalizationOptions.h  MapKind.h  MoveByDirectionRequest.h  MoveByThetaRequest.h  MoveLineRequest.h  MoveLinesRequest.h  MoveOptionFlag.h  MoveOptions.h  MoveToLocationsRequest.h  MoveToRequest.h  OptionalBool.h  OptionalFlt32.h  OptionalFlt64.h  OptionalInt16.h  OptionalInt32.h  OptionalInt64.h  OptionalInt8.h  OptionalLocalizationMovement.h  OptionalUInt16.h  OptionalUInt32.h  OptionalUInt64.h  OptionalUInt8.h  RecoverLocalizationRequest.h  RectFlt32.h  RectInt32.h  (+22 more)
Grinder/catkin_ws/devel/include/teb_local_planner/: FeedbackMsg.h  TebLocalPlannerReconfigureConfig.h  TrajectoryMsg.h  TrajectoryPointMsg.h
Grinder/catkin_ws/devel/lib/amcl/: amcl
Grinder/catkin_ws/devel/lib/base_local_planner/: point_grid
Grinder/catkin_ws/devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
Grinder/catkin_ws/devel/lib/fake_localization/: fake_localization
Grinder/catkin_ws/devel/lib/global_planner/: planner
Grinder/catkin_ws/devel/lib/map_server/: map_saver  map_server  rtest
Grinder/catkin_ws/devel/lib/move_base/: move_base
Grinder/catkin_ws/devel/lib/navfn/: navfn_node
Grinder/catkin_ws/devel/lib/pkgconfig/: amcl.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  fake_localization.pc  global_planner.pc  grinder_chassis_driver.pc  grinder_scheduler.pc  map_server.pc  move_base.pc  move_slow_and_clear.pc  nav_core.pc  navfn.pc  rotate_recovery.pc  slamware_ros_sdk.pc  teb_local_planner.pc  teb_local_planner_tutorials.pc  voxel_grid.pc
Grinder/catkin_ws/devel/lib/slamware_ros_sdk/: slamware_ros_sdk_server_node
Grinder/catkin_ws/devel/lib/teb_local_planner/: test_optim_node
Grinder/catkin_ws/devel/share/amcl/cmake/: amclConfig.cmake
Grinder/catkin_ws/devel/share/base_local_planner/cmake/: base_local_planner-msg-paths.cmake  base_local_plannerConfig.cmake
Grinder/catkin_ws/src/2-dnavigation-package/: README.md
Grinder/catkin_ws/src/2-dnavigation-package/aurora_remote_public/: version.txt
Grinder/catkin_ws/src/2-dnavigation-package/slamware_ros_sdk/: .gitignore  CMakeLists.txt
Grinder/catkin_ws/src/2-dnavigation-package/slamware_ros_sdk/cfg/diff_drive/: teb_local_planner_params.yaml
Grinder/catkin_ws/src/2-dnavigation-package/slamware_ros_sdk/include/slamware_ros_sdk/: slamware_ros_sdk_client.h
Grinder/catkin_ws/src/2-dnavigation-package/slamware_ros_sdk/launch/: slamware_ros_sdk_server_and_view.launch  slamware_ros_sdk_server_node.launch
Grinder/catkin_ws/src/2-dnavigation-package/slamware_ros_sdk/rviz/: slamware_ros_sdk_server_node.rviz
Grinder/catkin_ws/src/2-dnavigation-package/slamware_ros_sdk/src/client/: slamware_ros_sdk_client.cpp
Grinder/catkin_ws/src/2-dnavigation-package/slamware_ros_sdk/src/server/: geometry_rectangle.h  server_map_holder.cpp  server_map_holder.h  server_params.cpp  server_params.h  server_work_data.cpp  server_work_data.h  server_worker_base.cpp  server_worker_base.h  server_workers.cpp  server_workers.h  slamware_ros_sdk_server.cpp  slamware_ros_sdk_server.h  slamware_ros_sdk_server_node.cpp
Grinder/catkin_ws/src/grinder_chassis_driver/: CMakeLists.txt  README.md  setup.py
Grinder/catkin_ws/src/grinder_chassis_driver/config/: chassis_driver.yaml
Grinder/catkin_ws/src/grinder_chassis_driver/launch/: chassis_driver.launch
Grinder/catkin_ws/src/grinder_chassis_driver/msg/: ChassisStatus.msg  WheelSpeedCommand.msg  WheelSpeedState.msg
Grinder/catkin_ws/src/grinder_chassis_driver/src/grinder_chassis_driver/: __init__.py  chassis_driver_node.py  modbus_transport.py  register_map.py
Grinder/catkin_ws/src/grinder_chassis_driver/test/: test_modbus_transport.py  test_register_map.py
Grinder/catkin_ws/src/grinder_scheduler/: CMakeLists.txt  README.md
Grinder/catkin_ws/src/grinder_scheduler/config/: scheduler.yaml
Grinder/catkin_ws/src/grinder_scheduler/launch/: grinder_system.launch  scheduler.launch
Grinder/catkin_ws/src/grinder_scheduler/msg/: MapPreviewMetadata.msg  SchedulerStatus.msg
Grinder/catkin_ws/src/grinder_scheduler/src/grinder_scheduler/: __init__.py  aurora_bridge.py  local_rtsp_server.py  map_catalog_response.py  map_service.py  media_streamer.py  models.py  planner_adapter.py  scheduler_node.py  sl_link_loader.py  sl_linka_adapter.py
Grinder/doc/: ~$局部路径跟踪及避障子系统说明表(1).xlsx  地平研磨机需求拆解.xlsx  局部路径跟踪及避障子系统说明表(1).xlsx  智能研磨机技术方案20260325A.docx
Grinder/maps/raw/: 地图1_LIVE_MAP.stcm  地图1_LIVE_MAP1.stcm
Grinder/temp/: mediamtx.generated.yml
Grinder/temp/grinder_scheduler_state/: map_registry.json  scheduler_state.json  task_registry.json
Grinder/temp/grinder_scheduler_state/map_states/LIVE_MAP1/: map_overlay_state.json  overlay.npy
Grinder/temp/live_map/: map.yaml
Grinder/temp/path_debug/: planned_path_tasktask_mapv7_pathv1_1779948323.json  planned_path_tasktask_mapv8_pathv2_1779948364.json
(+177 files in other folders)
